tests/bad/no_return_switch.oc
/// fail: Function does not always return

def foo(): &char {
	match 5 {
		1 => return "hello"
		2 => return "world"
		3 => {}
		else => return "nope"
	}
}